

Call Features (res_features) Changes
------------------------------------
  * Added the parkedcalltransfers option to features.conf
  * Added parkedcallparking option to control one touch parking w/ parking
    pickup
  * Added parkedcallhangup option to control disconnect feature w/ parking
    pickup
  * Added parkedcallrecording option to control one-touch record w/ parking
    pickup
  * Added BRIDGE_FEATURES variable to set available features for a channel
  * The built-in method for doing attended transfers has been updated to
     include some new options that allow you to have the transferee sent
     back to the person that did the transfer if the transfer is not successful.
     See the options "atxferdropcall", "atxferloopdelay", and "atxfercallbackretries"
     in features.conf.sample.
  * Added support for configuring named groups of custom call features in
     features.conf.  This means that features can be written a single time, and
     then mapped into groups of features for different key mappings or easier
     access control.
  * Updated the ParkedCall application to allow you to not specify a parking
     extension.  If you don't specify a parking space to pick up, it will grab
     the first one available.
  * Added cli command 'features reload' to reload call features from features.conf
  * Moved into core asterisk binary.
  * Changed the default setting for featuredigittimeout to 2000 ms from 500 ms.

Language Support Changes
------------------------
  * Brazilian Portuguese (pt-BR) in VM, and say.c was added
  * Added support for the Hungarian language for saying numbers, dates, and times.

AGI Changes
-----------
  * Added SPEECH commands for speech recognition. A complete listing can be found
     using agi show.
  * If app_stack is loaded, GOSUB is a native AGI command that may be used to
    invoke subroutines in the dialplan.  Note that calling EXEC with Gosub